--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^2.5.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.7",
     "expo": "~49.0.7",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3"
@@ -17,7 +21,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@expo/ngrok": "^4.1.0"
   },
   "private": true
 }
